--- a/src/app/admin-server/public/css/style.css
+++ b/src/app/admin-server/public/css/style.css
@@ -12,7 +12,7 @@
   .navigation {
     position: relative;
     height: 100%;
-    background: linear-gradient(to bottom, #20c77c 0%, #00acb8 100%);
+    background: #003441;
     overflow-x: hidden;
     transition: all 0.5s;
   }
