--- a/src/app/admin-server/public/css/style.css
+++ b/src/app/admin-server/public/css/style.css
@@ -91,6 +91,14 @@
     color: #e65757;
   }
 
+  .btn-primary{
+    background: #20c7bf;
+  }
+
+  .btn-primary:hover{
+    background: #157e78;
+  }
+
   .card{
     margin-top: 25px;
   }
